--- a/app/src/main/res/drawable/ingredient_background.xml
+++ b/app/src/main/res/drawable/ingredient_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@android:color/white"/> <!-- White background for step -->
-    <corners android:radius="4dp"/> <!-- Rounded corners -->
-    <stroke android:color="@android:color/darker_gray" android:width="1dp"/> <!-- Border color and width -->
+    <solid android:color="@color/input_background"/>
+    <corners android:radius="1dp"/>
+    <stroke android:color="@color/input_border" android:width="1dp"/>
 </shape>
