--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -3,35 +3,51 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.myRecipes.MyRecipesFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
+    <!-- TabLayout pre prepínanie medzi možnosťami -->
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/myRecipesFragment"
-        android:gravity="center"
-        android:layout_gravity="top|center"
-        android:layout_marginTop="20dp"
-        android:textColor="@color/white"/>
+        android:backgroundTint="@color/component_background"
+        app:tabTextColor="@color/black"
+        >
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabMyRecipes"
+            android:text="Moje Recepty" />
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/tabFavoriteRecipes"
+            android:text="Moje Obľúbené" />
+    </com.google.android.material.tabs.TabLayout>
 
+    <!-- RecyclerView na zobrazenie receptov -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewRecipes"
         android:layout_width="match_parent"
-        android:layout_height="464dp"
+        android:layout_height="match_parent"
         android:scrollbars="vertical"
         android:layout_gravity="center|top"
         android:layout_marginTop="75dp"
-        android:paddingLeft = "10dp"
-        android:paddingRight = "10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
         tools:listitem="@layout/item_recipe" />
 
-    <Button
+    <!-- Tlačidlo na pridanie nového receptu -->
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/btnCreate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|center"
-        android:layout_marginBottom="100dp"
-        android:text="Pridaj Recept" />
+        android:layout_gravity="top|center"
+        android:layout_margin="24dp"
+        android:contentDescription="Pridaj recept"
+        android:src="@drawable/icon_add"
+        app:backgroundTint="@color/salmon_pink"
+        app:tint="@android:color/white" />
 
 </FrameLayout>
