--- a/app/src/main/res/layout/ingredient_row.xml
+++ b/app/src/main/res/layout/ingredient_row.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal"
     android:layout_marginBottom="8dp"
     android:padding="5dp"
-    android:background="@drawable/ingredient_background"
+
     >
 
     <EditText
@@ -22,6 +22,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:popupBackground="@drawable/spinner_dropdown_bg"
         />
 
     <EditText
