--- a/app/src/main/res/layout/item_recipe_home.xml
+++ b/app/src/main/res/layout/item_recipe_home.xml
@@ -48,8 +48,12 @@
             android:layout_height="wrap_content"
             android:numStars="5"
             android:rating="4.5"
+            android:stepSize="0.5"
             android:isIndicator="true"
-            android:layout_gravity="center"/>
+            android:layout_gravity="center"
+            android:progressTint="@color/salmon_pink"
+            android:progressBackgroundTint="@color/lightgray"
+            />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
