--- a/app/src/main/res/layout/step_row.xml
+++ b/app/src/main/res/layout/step_row.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_marginBottom="12dp"
     android:background="@drawable/step_background"
-    android:elevation="4dp"
+    android:elevation="10dp"
     android:padding="12dp"
     >
 
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:backgroundTint="@color/red"
         android:textSize="20sp"
-        android:text="@string/remove" />
+        android:text="@string/remove"
+        android:layout_gravity="end"/>
     <EditText
         android:id="@+id/editStepDescription"
         android:layout_width="match_parent"
