--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="black">#FF000000</color>
+    <color name="gray">#FF808080</color>
+    <color name="lightgray">#FFC0C0C0</color>
+    <color name="darkgray">#FF404040</color>
     <color name="white">#FFFFFFFF</color>
     <color name="purple">#56188f</color>
     <color name="orange">#8f490b</color>
@@ -12,6 +15,15 @@
     <color name="salmon_pink">#FFA3A5</color>
     <color name="tea_green">#DAFEB7</color>
     <color name="straw">#DED856</color>
+
+    <color name="auth_background">#F0F0F0</color>
+
+    <color name="component_background">@color/input_background</color>
+    <color name="component_border">@color/input_border</color>
+    <color name="text_color">#FF000000</color>
+    <color name="button_color">@color/dark_moss_green</color>
+    <color name="input_background">#F0F0F0</color>
+    <color name="input_border">#DDDDDD</color>
 
     <color name="red">#870c09</color>
 
