--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,15 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Nezafoodaj" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
         <item name="colorPrimary">@color/dark_moss_green</item>
         <item name="colorOnPrimary">@color/white</item>
         <item name="colorSecondary">@color/salmon_pink</item>
         <item name="colorOnSecondary">@color/white</item>
         <item name="colorSurface">@color/dark_moss_green</item> <!-- Toolbars -->
         <item name="colorOnSurface">@color/straw</item>     <!-- Icons on toolbars -->
-
+        <item name="titleTextColor">@color/white</item>
 
     </style>
-
+    <style name="ChipStyle" parent="Widget.MaterialComponents.Chip.Choice">
+        <item name="android:textColor">@color/straw</item>
+        <item name="android:enabled">@color/white</item>
+        <item name="chipCornerRadius">0dp</item>
+        <item name="chipStrokeWidth">1dp</item>
+        <item name="chipStrokeColor">@color/component_border</item>
+    </style>
     <style name="Theme.Nezafoodaj" parent="Base.Theme.Nezafoodaj" />
 </resources>
