added recipe editing, user settings, user photo upload with image crop UCrop
TODO:
add UCrop to other image uploads 💯

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:backgroundTint="@color/auth_background"
     android:padding="24dp"
-    tools:context=".auth.AuthActivity"
+    tools:context=".activities.auth.AuthActivity"
     android:orientation="vertical">
 
     <!-- Nadpis -->
