--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -40,16 +40,30 @@
                 android:scaleType="fitCenter"
                 android:contentDescription="Final Image"
                 android:layout_marginBottom="16dp" />
-
-                <!-- Author Created -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_gravity="end"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="16dp">
                 <TextView
                     android:id="@+id/textViewAuthor"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="[Author]"
                     android:textStyle="bold"
-                    android:layout_gravity="end"
+                    android:textSize="16sp"
+                    android:layout_marginEnd="10dp"
                     />
+                <ImageView
+                    android:id="@+id/iv_authorPhoto"
+                    android:src="@drawable/icon_profile"
+                    android:background="@drawable/profile_photo_background"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp" />
+            </LinearLayout>
+
                 <!-- Date Created -->
                 <TextView
                     android:id="@+id/textViewDate"
