--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -21,6 +21,7 @@
             android:text="@string/homeFragment"
             android:textSize="24sp"
             android:textStyle="bold"
+            android:textColor="@color/header_color"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -31,6 +32,7 @@
             android:layout_height="wrap_content"
             android:text="@string/homeFragment_miniText"
             android:textSize="14sp"
+            android:gravity="center"
             android:layout_marginTop="16dp"
             app:layout_constraintTop_toBottomOf="@id/tvHomeSlogan"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,6 +56,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:textSize="24sp"
+            android:textColor="@color/header_color"
             android:background="@drawable/home_section_name"
             android:text="@string/homefragment_textView_latest"
             app:layout_constraintEnd_toEndOf="parent"
@@ -76,6 +79,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:textSize="24sp"
+            android:textColor="@color/header_color"
             android:background="@drawable/home_section_name"
             android:text="@string/homefragment_textView_best"
             app:layout_constraintEnd_toEndOf="parent"
